# PNet

./: .gitignore  LICENSE  setup.cfg
PNet/dataset/: __init__.py
PNet/utils/: save_load.py
datasets/: Formulate1.py  Formulate2.py
datasets/CAMEO/: cameo_targets.csv
datasets/CASP10/: casp10.seq  casp10_seq.csv
datasets/CASP11/: casp11.seq  casp11_seq.csv
datasets/CASP12/: casp12.seq  casp12_seq.csv
datasets/CASP5/: casp5.seq  casp5_seq.csv
datasets/CASP6/: casp6.seq  casp6_seq.csv
datasets/CASP7/: casp7.seq  casp7_seq.csv
datasets/CASP8/: casp8.seq  casp8_seq.csv
datasets/CASP9/: casp9.seq  casp9_seq.csv
datasets/PDB50/: cullpdb_pc50_res2.0_R0.25_d170608_chains15293.txt  pdb50_seq.csv
datasets/PDB50cut/: pdb50cut.csv
datasets/PDB50full/: pdb50full.csv
datasets/PDB50selected/: pdb50selected.csv
examples/: CASP11_top.pkl  CASP12_top.pkl  [regression]atrous_conv_contact_map.py  atrous_conv_contact_map.py  atrous_conv_contact_map2.py  atrous_conv_example.py  casp_conv_net.py  casp_conv_net_torch.py  conv_3D_structure.py  conv_contact_map.py  custom_conv_contact_map.py  diag_conv_contact_map.py  encode_decode_example.py  generate_features.py  pdb50_conv_net.py  raptorx_copy_example.py  vanilla_conv_example.py
pnet/: __init__.py
pnet.egg-info/: PKG-INFO  SOURCES.txt  pbr.json
pnet/data/: __init__.py  sequence_dataset.py  structure_dataset.py
pnet/dataset/: __init__.py
pnet/feat/: MSA.py  SS_SA.py  __init__.py  twoD_features.py
pnet/models/: .conv_net_contact_map.py.swp  ContactMapToCoordGAN.py  __init__.py  (+14 more)
scripts/: msa_gen.py
(+430 files in other folders)
