[metadata]
name = pnet
author = Zhenqin Wu, Pande Lab Stanford
summary = 
description-file = README.md
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
keywords =
    setup
    distutils
[files]
packages =
    pnet
